[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://Scripts/map.gd" type="Script" id=2]
[ext_resource path="res://Scenes/wallLampDemo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/AppearanceMenuConsole.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 1, 5 )

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.854902, 0.854902, 0.854902, 1 )
sky_horizon_color = Color( 0.384314, 0.94902, 0.937255, 1 )
sky_curve = 0.302722
sun_energy = 0.0

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
background_energy = 0.0
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_enabled = false
fog_depth_curve = 0.0346741
fog_transmit_curve = 0.0334929

[node name="Map" type="Spatial"]
script = ExtResource( 2 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.2914, 3.24697, -25.4052 )

[node name="NetworkSetup" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0

[node name="PlayerName" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 350.0
margin_bottom = 24.0
text = "Player Name"

[node name="IpAddress" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 52.0
text = "IP Address"

[node name="Host" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 56.0
margin_right = 350.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 60 )
text = "HOST"

[node name="Join" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 120.0
margin_right = 350.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 60 )
text = "JOIN"

[node name="CheckButton" type="CheckButton" parent="NetworkSetup/VBoxContainer"]
margin_top = 184.0
margin_right = 350.0
margin_bottom = 224.0
text = "Male(on)/Female(off)"

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Floor"]
width = 10.0
depth = 10.0

[node name="Roof Slats" type="CanvasLayer" parent="."]

[node name="Roof" type="StaticBody" parent="Roof Slats"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Roof Slats/Roof"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Roof Slats/Roof"]
width = 10.0
depth = 10.0

[node name="Roof3" type="StaticBody" parent="Roof Slats"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, -28 )

[node name="CollisionShape" type="CollisionShape" parent="Roof Slats/Roof3"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Roof Slats/Roof3"]
width = 10.0
depth = 10.0

[node name="Roof7" type="StaticBody" parent="Roof Slats"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, 30 )

[node name="CollisionShape" type="CollisionShape" parent="Roof Slats/Roof7"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Roof Slats/Roof7"]
width = 10.0
depth = 10.0

[node name="Floor2" type="StaticBody" parent="."]
transform = Transform( 10, 0, 0, 0, -4.37114e-08, -10, 0, 1, -4.37114e-07, 0, 0, 50 )

[node name="CollisionShape" type="CollisionShape" parent="Floor2"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Floor2"]
width = 10.0
depth = 10.0

[node name="Floor3" type="StaticBody" parent="."]
transform = Transform( 10, 0, 0, 0, -4.37114e-08, -10, 0, 1, -4.37114e-07, 0, 0, -50 )

[node name="CollisionShape" type="CollisionShape" parent="Floor3"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Floor3"]
width = 10.0
depth = 10.0

[node name="Floor4" type="StaticBody" parent="."]
transform = Transform( -4.37114e-07, -1, 0, 10, -4.37114e-08, 0, 0, 0, 10, 50, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor4"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Floor4"]
width = 10.0
depth = 10.0

[node name="Floor5" type="StaticBody" parent="."]
transform = Transform( -4.37114e-07, -1, 0, 10, -4.37114e-08, 0, 0, 0, 10, -50, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor5"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Floor5"]
width = 10.0
depth = 10.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="lamps" type="CanvasLayer" parent="."]

[node name="wallLampDemo" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, -39 )

[node name="wallLampDemo2" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, -10 )

[node name="wallLampDemo3" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, 18 )

[node name="wallLampDemo4" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, 40 )

[node name="wallLampDemo5" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, 40 )

[node name="wallLampDemo6" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, 11 )

[node name="wallLampDemo7" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, -17 )

[node name="wallLampDemo8" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, -39 )

[node name="wallLampDemo9" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -39.5, 12, -48.5 )

[node name="wallLampDemo10" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10.5, 12, -48.5 )

[node name="wallLampDemo11" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 17.5, 12, -48.5 )

[node name="wallLampDemo12" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 39.5, 12, -48.5 )

[node name="wallLampDemo13" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, 39.5, 12, 49.5 )

[node name="wallLampDemo14" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, 10.5, 12, 49.5 )

[node name="wallLampDemo15" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, -17.5, 12, 49.5 )

[node name="wallLampDemo16" parent="lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, -39.5, 12, 49.5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0871558, 0.996195, 0, -0.996195, 0.0871558, 0, 65, 0 )
light_color = Color( 0.721569, 0.74902, 0.847059, 1 )
shadow_enabled = true

[node name="AppearanceMenuConsole" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 2, 9 )

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/PlayerName" to="." method="_on_PlayerName_text_changed"]
[connection signal="text_changed" from="NetworkSetup/VBoxContainer/PlayerName" to="NetworkSetup" method="_on_PlayerName_text_changed"]
[connection signal="text_changed" from="NetworkSetup/VBoxContainer/IpAddress" to="NetworkSetup" method="_on_IpAddress_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join" to="NetworkSetup" method="_on_Join_pressed"]
[connection signal="toggled" from="NetworkSetup/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
